<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:behavior_peekHeight="@dimen/peek_height"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/empty_icon_width"
                android:layout_height="@dimen/empty_icon_height"
                android:layout_margin="@dimen/margin_top"
                android:src="@drawable/ic_default_music" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_song_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_right_five"
                    android:layout_marginTop="@dimen/margin_top"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:text="@string/bottom_sheet_song"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_sheet_artist" />

            </LinearLayout>

            <ImageView
                android:id="@+id/btnPlaySong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/bottom_sheet_margin_right"
                android:layout_marginTop="@dimen/bottom_sheet_margin_top"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/btnLyric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/bottom_sheet_margin_right"
                android:layout_marginTop="@dimen/bottom_margin_top"
                android:src="@drawable/ic_lyric"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/icon_margin_right"
                android:layout_marginTop="@dimen/icon_margin_top"
                android:src="@drawable/ic_more"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_height">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-9dp"
            android:paddingEnd="@dimen/padding_zero"
            android:paddingStart="@dimen/padding_zero"
            android:progressTint="@color/colorPrimary"
            android:thumbTint="@color/colorPrimaryDark" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp">

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_medium"
                android:text="@string/text_time"
                android:textSize="@dimen/text_size_ten" />

            <ImageView
                android:id="@+id/image_repeat_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left"
                android:src="@drawable/ic_repeat" />

            <ImageView
                android:id="@+id/image_previous_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_notify"
                android:layout_toLeftOf="@+id/image_play_song"
                android:src="@drawable/ic_previous" />

            <ImageView
                android:id="@+id/image_play_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/image_next_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_left_notify"
                android:layout_toRightOf="@+id/image_play_song"
                android:src="@drawable/ic_next" />

            <ImageView
                android:id="@+id/image_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_margin_left"
                android:src="@drawable/ic_shuffle" />
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>